Fix Java 8 compatibility in 1.14 ConfigManager